# simpleq

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .travis.yml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  COMPETITIVE_ANALYSIS.md  CONTRIBUTING.md  Dockerfile  LICENSE  OPEN_SOURCE_SUCCESS_STRATEGY.md  PHASE1_SETUP.md  PLAN.md  QUALITY_ROADMAP.md  README.md  RELEASING.md  ROADMAP.md  SECURITY.md  docker-compose.yml  mkdocs.yml  pyproject.toml  requirements.txt  setup.py
.github/: labels.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: benchmark.yml  docs.yml  release.yml  security.yml  test.yml
docs/: api.md  benchmarks.md  compatibility.md  deployment.md  fifo-dlq.md  iam.md  index.md  live-aws.md  localstack.md  migration-celery.md  migration-rq.md  migration.md  quickstart.md  stability.md  testing.md  troubleshooting.md
examples/: basic.py  cdk_stack.py  django_app.py  ecs_worker.py  fastapi_app.py  fifo.py  lambda_handler.py  terraform.tf
simpleq/: __init__.py  __main__.py  _sync.py  cli.py  client.py  config.py  dashboard.py  exceptions.py  job.py  jobs.py  observability.py  protocols.py  queue.py  queues.py  references.py  serializers.py  sqs.py  task.py  testing.py  worker.py  workers.py
simpleq/cli_commands/: __init__.py  job.py  monitoring.py  queue.py  root.py  shared.py  task.py  worker.py
sqsq/: jobs.py  queues.py  workers.py
tests/: conftest.py  test_imports.py  test_jobs.py  test_queues.py  test_workers.py
tests/fixtures/: __init__.py  tasks.py  transport_contract.py
tests/integration/: test_queue_and_worker.py  test_transport_contract_integration.py
tests/live/: iam-policy.json  test_live_smoke.py
tests/performance/: benchmark.py  test_throughput.py
tests/unit/: test_cli_commands.py  test_config.py  test_dashboard_cli.py  test_dashboard_server.py  test_examples_and_docs.py  test_job.py  test_observability.py  test_pytest_collection_hooks.py  test_queue.py  test_queue_runtime.py  test_serializers.py  test_sqs.py  test_sync_client_and_main.py  test_task.py  test_testing.py  test_transport_contract.py  test_worker.py
