[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "simpleq"
version = "2.0.0"
description = "The Python task queue for AWS. Zero infrastructure, infinite scale, pennies in cost."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "UNLICENSE"}
authors = [
    {name = "Randall Degges", email = "r@rdegges.com"}
]
maintainers = [
    {name = "Randall Degges", email = "r@rdegges.com"}
]
keywords = ["sqs", "aws", "amazon", "queue", "worker", "tasks", "job", "async", "serverless"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: Public Domain",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Distributed Computing",
    "Typing :: Typed",
]

dependencies = [
    "boto3>=1.34.0",
    "aioboto3>=13.0.0",
    "pydantic>=2.6.0",
    "structlog>=24.1.0",
    "typer>=0.9.0",
    "rich>=13.7.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-timeout>=2.2.0",
    "pytest-xdist>=3.5.0",

    # Type checking
    "mypy>=1.8.0",
    "boto3-stubs[sqs]>=1.34.0",
    "types-all>=1.0.0",

    # Linting
    "ruff>=0.3.0",

    # Local AWS
    "localstack>=3.2.0",
    "moto>=5.0.0",

    # Pre-commit
    "pre-commit>=3.6.0",
]

observability = [
    "prometheus-client>=0.20.0",
    "opentelemetry-api>=1.23.0",
    "opentelemetry-sdk>=1.23.0",
    "aws-xray-sdk>=2.13.0",
]

dashboard = [
    "httpx>=0.27.0",
    "jinja2>=3.1.0",
    "uvicorn>=0.27.0",
]

all = [
    "simpleq[dev,observability,dashboard]",
]

[project.urls]
Homepage = "https://github.com/rdegges/simpleq"
Documentation = "https://simpleq.readthedocs.io"
Repository = "https://github.com/rdegges/simpleq"
"Bug Tracker" = "https://github.com/rdegges/simpleq/issues"

[project.scripts]
simpleq = "simpleq.cli.main:app"

[tool.setuptools]
packages = ["simpleq"]

[tool.setuptools.package-data]
simpleq = ["py.typed"]

# Pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--strict-config",
    "--cov=simpleq",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "performance: marks tests as performance benchmarks",
]

# Coverage configuration
[tool.coverage.run]
source = ["simpleq"]
omit = [
    "*/tests/*",
    "*/test_*.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

# Ruff configuration
[tool.ruff]
target-version = "py310"
line-length = 88
indent-width = 4

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PERF",   # perflint
    "RUF",    # Ruff-specific rules
]

ignore = [
    "E501",   # Line too long (handled by formatter)
    "B008",   # Do not perform function calls in argument defaults
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ARG", "S101", "S105", "S106"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

# MyPy configuration
[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
ignore_missing_imports = false

[[tool.mypy.overrides]]
module = [
    "moto.*",
    "localstack.*",
]
ignore_missing_imports = true
